--- a/artrefs.bib
+++ b/artrefs.bib
@@ -34,6 +34,16 @@
   annote = {common, synch, vdp, Lorenz, }
 }
 
+@Book{anisch_complex_vibrations_in_simple_systems,
+  title = {Сложные колебания в простых системах},
+  author = {Анищенко, В. С.},
+  location = {М:.},
+  publisher = {Наука},
+  year = {1990},
+  language = {russian},
+  pagetotal = {312}
+}
+
 @Book{dmitriev_gen_chaos,
   title = {Генерация хаоса},
   author = {Дмитриев, А. С. and Ефремова, Е. В. and Максимов, Н. А. and Панас, А. И.},
@@ -87,6 +97,16 @@
   language = {russian},
   pagetotal = {424},
   annote = {common, Ressler(Belousov), Lorenz, Duffing, Tunnel diode , large biblio}
+}
+
+@Book{landa_nonlin_vivro_waves,
+  title = {Нелинейные колебания и волны},
+  author = {Ланда, П. С.},
+  location = {М.:},
+  publisher = {Физматлит},
+  year = {1997},
+  language = {russian},
+  pagetotal = {496}
 }
 
 @Book{chernavskii_syn_info,
@@ -1459,6 +1479,222 @@
   pagetotal = {496}
 }
 
+@article{DBLP:journals/corr/WangWQ15,
+  author    = {Bo Wang and Hanyu Wang and Miao Qi},
+  title     = {{PPV} modelling of memristor-based oscillator},
+  journal   = {CoRR},
+  volume    = {abs/1511.05437},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1511.05437},
+  % archivePrefix = {arXiv},
+  eprint    = {1511.05437},
+  % timestamp = {Mon, 28 Aug 2017 17:00:31 +0200},
+  % biburl    = {http://dblp.org/rec/bib/journals/corr/WangWQ15},
+  % bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{PhysRevE.80.016201,
+  title = {Parameter and state estimation of experimental chaotic systems using synchronization},
+  author = {Quinn, John C. and Bryant, Paul H. and Creveling, Daniel R. and Klein, Sallee R. and Abarbanel, Henry D. I.},
+  journal = {Phys. Rev. E},
+  volume = {80},
+  issue = {1},
+  pages = {016201},
+  numpages = {17},
+  year = {2009},
+  month = {7},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.80.016201},
+  % url = {https://link.aps.org/doi/10.1103/PhysRevE.80.016201}
+}
+
+
+@Article{gang_chaos_on_phase_noise,
+  author = {Gang Feng Yan and Xian He Huang},
+  title = {Chaos on Phase Noise of Van Der Pol Oscillator},
+  journal = {Telkomnika},
+  year = 2010,
+  volume = {8},
+  number = {3},
+  pages = {301--308},
+  doi = {10.12928/telkomnika.v8i3.632},
+  language = {english}
+}
+
+@article{doi:10.1063/1.4705999,
+  author = {F. Moron and A. L. Hoendervanger and M. Bonneau and Q. Bouton and A. Aspect and D. Boiron and D. Clement and C. I. Westbrook},
+  title = {An oscillator circuit to produce a radio-frequency discharge and application to metastable helium saturated absorption spectroscopy},
+  journal = {Review of Scientific Instruments},
+  volume = {83},
+  number = {4},
+  pages = {044705},
+  year = {2012},
+  doi = {10.1063/1.4705999},
+  % url = {https://doi.org/10.1063/1.4705999},
+  eprint = {https://doi.org/10.1063/1.4705999}
+}
+
+@Article{bonetti_super_persistent_colpitts,
+   author = {{Bonetti}, R.~C. and {de Souza}, S.~L.~T. and {Batista}, A.~M. and  {Szezech}, Jr., J.~D. and {Caldas}, I.~L. and {Viana}, R.~L. and {Lopes}, S.~R. and {Baptista}, M.~S.},
+   title = {Super persistent transient in a master-slave configuration with {Colpitts} oscillators},
+   journal = {Journal of Physics A Mathematical General},
+   % archivePrefix = "arXiv",
+   eprint = {1405.0175},
+   primaryClass = "nlin.CD",
+   year = 2014,
+   month = oct,
+   volume = 47,
+   eid = {405101},
+   pages = {405101},
+   doi = {10.1088/1751-8113/47/40/405101},
+}
+
+@Article{dmitriev_trans_chaos_lowpower,
+  author = {Дмитриев, А. С. and Ефремова, Е. В. and  Никишов, А. Ю. and  Панас, А. И. },
+  title = {Транзисторные генераторы хаоса малой мощности},
+  journal = {Изв. вузов ПНД},
+  year = 2008,
+  volume = {16},
+  number = {3},
+  pages = {56--70},
+  language = {russian}
+}
+
+
+@Article{baranov_chaos_vdp,
+  author = {Баранов, С. В. and Кузнецов, С. П. and Пономаренко, В. И. },
+  title = {Хаос в фазовой динамике осциллятора {Ван дер Поля} с модулированной добротностью и дополнительной запаздывающей обратной связью},
+  journal = {Известия высших учебных заведений. Прикладная нелинейная динамика},
+  year = 2010,
+  number = {18},
+  pages = {11--23},
+  language = {russian}
+}
+
+@Article{kuznetsov_phenomen_vdp,
+  author = {Кузнецов, А. П. and Селиверстова, Е. С. and  Трубецков, Д. И. and Тюрюкина, Л. В.},
+  title = {{Феномен уравнения Ван дер Поля}},
+  journal = {Изв. вузов ПНД},
+  year = 2014,
+  volume = {22},
+  number = {4},
+  pages = {3--42},
+  language = {russian}
+}
+
+@article{ROSSLER1976397,
+  author = {Rössler, O.E. },
+  title = {An equation for continuous chaos},
+  journal = {Physics Letters A},
+  volume = {57},
+  number = {5},
+  pages = {397--398},
+  year = {1976},
+  issn = {0375-9601},
+  doi = {https://doi.org/10.1016/0375-9601(76)90101-8},
+  % url = {http://www.sciencedirect.com/science/article/pii/0375960176901018}
+}
+
+@Book{andrianov_laser,
+  title = {Квантовая теория лазера},
+  author = {Андрианов, Е.С. and Пухов, А. А.},
+  location = {М.:},
+  publisher = {МФТИ},
+  year = {2014},
+  language = {russian},
+  pagetotal = {92},
+}
+
+
+@Book{puhov_ur_reaction_diffusion,
+  title = {Уравнение ``реакция-диффузия''},
+  author = {Пухов, А. А.},
+  location = {М.:},
+  publisher = {МФТИ},
+  year = {2014},
+  language = {russian},
+  pagetotal = {72},
+}
+
+@Book{anisch_reg_and_chaotic_vibro,
+  title = {Регулярные и хаотические автоколебания},
+  author = {Анищенко, В. С. and Астахов, В. В. and Вадивасова, Т.В.},
+  location = {Долгопрудный},
+  publisher = {Изд. дом ``Интеллект''},
+  year = {2009},
+  language = {russian},
+  pagetotal = {312},
+}
+
+@Book{picovskii_syncro,
+  title = {Синхронизация. Фундаментальное нелинейное явление},
+  author = {Пиковский, А. and Розенблюм, М. and Куртс, Ю.},
+  location = {М.:},
+  publisher = {Техносфера},
+  year = {2003},
+  language = {russian},
+  pagetotal = {484},
+  annote = {}
+}
+
+@Book{malinetskii_modern_methods_nl_dyn,
+  title = {Современные проблемы нелинейной динамики},
+  author = {Малинецкий, Г. Г. and Потапов, А. Б.},
+  location = {М.:},
+  publisher = {УРСС},
+  year = {2000},
+  language = {russian},
+  pagetotal = {336},
+  annote = {}
+}
+
+@Article{math5040070,
+  author = {Cooper, Matthew and Heidlauf, Peter and Sands, Timothy},
+  title = {Controlling Chaos—Forced van der Pol Equation},
+  journal = {Mathematics},
+  volume = {5},
+  year = {2017},
+  number = {4},
+  % URL = {http://www.mdpi.com/2227-7390/5/4/70},
+  % ISSN = {2227-7390},
+  ABSTRACT = {Nonlinear systems are typically linearized to permit linear feedback control design, but, in some systems, the nonlinearities are so strong that their performance is called chaotic, and linear control designs can be rendered ineffective. One famous example is the van der Pol equation of oscillatory circuits. This study investigates the control design for the forced van der Pol equation using simulations of various control designs for iterated initial conditions. The results of the study highlight that even optimal linear, time-invariant (LTI) control is unable to control the nonlinear van der Pol equation, but idealized nonlinear feedforward control performs quite well after an initial transient effect of the initial conditions. Perhaps the greatest strength of ideal nonlinear control is shown to be the simplicity of analysis. Merely equate coefficients order-of-differentiation insures trajectory tracking in steady-state (following dissipation of transient effects of initial conditions), meanwhile the solution of the time-invariant linear-quadratic optimal control problem with infinite time horizon is needed to reveal constant control gains for a linear-quadratic regulator. Since analytical development is so easy for ideal nonlinear control, this article focuses on numerical demonstrations of trajectory tracking error.},
+  DOI = {10.3390/math5040070}
+}
+
+
+
+@Article{buscarino_sync_rossler,
+  author = {Arturo Buscarino and Mattia Frasca and Marco Branciforte and Luigi Fortuna and Julien Clinton Sprott},
+  title = {Synchronization of two Rössler systems with switching coupling},
+  journal = {Nonlinear Dynamics},
+  year = 2017,
+  volume = {88},
+  number = {1},
+  pages = {673--683},
+  language = {english}
+}
+
+@article{rosalie_rossler_template,
+  author={Martin Rosalie},
+  title={Templates and subtemplates of Rössler attractors from a bifurcation diagram},
+  journal={Journal of Physics A: Mathematical and Theoretical},
+  volume={49},
+  number={31},
+  pages={315101},
+  url={http://stacks.iop.org/1751-8121/49/i=31/a=315101},
+  year={2016},
+  abstract={We study the bifurcation diagram of the Rössler system. It displays the various dynamical regimes of the system (stable or chaotic) when a parameter is varied. We choose a diagram that exhibits coexisting attractors and banded chaos. We use the topological characterization method to study these attractors. Then, we detail how the templates of these attractors are subtemplates of a unique template. Our main result is that only one template describes the topological structure of eight attractors. This leads to a topological partition of the bifurcation diagram that gives the symbolic dynamic of all bifurcation diagram attractors with a unique template.}
+}
+
+
+@article{Ginoux2012VanDP,
+  title={Van der Pol and the history of relaxation oscillations: toward the emergence of a concept},
+  author={Jean-Marc Ginoux and Christophe Letellier},
+  journal={Chaos},
+  year={2012},
+  volume={22 2},
+  pages={023120}
+}
 
 
 
