--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -2,7 +2,7 @@
 
 Современный уровень науки и технологий характеризуется
 широким использованием нелинейных динамических
-систем~\cite{andronov_vitt_haikin,anisch_nonlin_eff,mishenko_du_small_relax,nonlin_vibro}.
+систем~\cite{andronov_vitt_haikin,anisch_nonlin_eff,mishenko_du_small_relax,nonlin_vibro,malinetskii_modern_methods_nl_dyn}.
 При этом нелинейные эффекта присущи как объектам,
 так и системам управления~\cite{kubik_nlsc,vukobr_nonadopt}. Динамика нелинейных систем,
 характеризуется общим уровнем сложности моделей,
@@ -10,7 +10,7 @@
 точного аналитического представления.
 Помимо этого, был обнаружен, и в последнее время представляет
 постоянный интерес для исследователей класс систем,
-проявляющих хаотическую динамику~\cite{moon_chaotic_vibr,magni_theory_dyn_chaos,kuznetsov_dyn_chaos,neimark_stoch_chaos_vibro}.
+проявляющих хаотическую динамику~\cite{moon_chaotic_vibr,magni_theory_dyn_chaos,kuznetsov_dyn_chaos,neimark_stoch_chaos_vibro,anisch_reg_and_chaotic_vibro}.
 Для таких систем, вследствие чувствительности к начальным условиям
 и параметрам, характерным свойством является наличие ограниченного горизонта прогноза как
 в прошлое, так и в будущее, рост энтропии
@@ -25,7 +25,8 @@
 Хаотически свойства проявляют системы как классической,
 так и квантовой механики.
 Новые свойства подобных систем требуют создания новых
-методов для решения задач моделирования, управления и идентификации.
+методов для решения задач моделирования,
+управления и идентификации~\cite{karabutov_adapt_id_sys,dmitriev_trans_chaos_lowpower}.
 
 \section{Свойства систем хаотической динамики применительно к задаче идентификации}  % {{{1
 
@@ -56,7 +57,7 @@
 % TODO: may be p1?
 При описании и анализе динамики хаотических
 систем используются специализированные характеристики и показатели.
-Например, сечение Пуанкаре~\cite{moon_chaotic_vibr,atu_st105}
+Например, сечение Пуанкаре~\cite{moon_chaotic_vibr,anisch_complex_vibrations_in_simple_systems,atu_st105}
 позволяет визуально определить признаки хаотической динамики.
 Однако, использование визуальных признаков в качестве критерия
 весьма затруднено.
