--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -136,7 +136,8 @@ $x$. С другой стороны, так как параметр $r$ опре
 существенно большем, чем характерное время оборота жидкостного вала.
 
 Другой системой, для моделирования которой применяется система Лоренца --
-это модель одномодового лазера. В этой модели переменной $x$ соответствует
+это модель одномодового лазера~\cite{andrianov_laser}.
+В этой модели переменной $x$ соответствует
 амплитуда поля в резонаторе, $y$ -- поляризации, $z$ -- инверсии заселённости
 квантовых уровней активной среды. Параметры $\sigma$ и $b$
 определяются отношениями коэффициентов релаксации, а искомый параметр $r$
