--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -14,7 +14,7 @@
 Динамическая система Рёсслера~(\ref{atu:eq:rossler})
 является в кокой-то мере абстрактной моделью,
 описывающей кинетику колебательных и хаотических химических процессов
-~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn},
+~\cite{ROSSLER1976397,neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn,puhov_ur_reaction_diffusion},
 таких как реакция Белоусова-Жаботинского, кристаллизации фосфита свинца и других реакций.
 
 
@@ -122,7 +122,7 @@
 для идентификации, чем системы Лоренца и ``Sprott A''.
 
 Участки хаотической динамики перемежаются с участками сложно-периодических
-колебаний. При этом происходит изменение структуры аттрактора.
+колебаний. При этом происходит изменение структуры аттрактора~\cite{buscarino_sync_rossler,rosalie_rossler_template}.
 Более того, при одном и том же типе динамики может изменяться как структура аттрактора,
 так и размер области, в которую он может быть вписан.
 
