--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -20,6 +20,13 @@
 параметрах системы необходима при проведении  контроля  работоспособности  в
 процессе эксплуатации устройства~\cite{atu_apir2013}.
 
+Существует множество физических реализаций генератора Колпитца.
+Исторически первыми были схемы не электронных лампах. % TODO: cite
+В настоящее роль активного нелинейного элемента в генераторе
+чаще всего выполняет биполярный или полевой транзистор~\cite{doi:10.1063/1.4705999}. % TODO: cite
+Часть современных работ посвящены изучению генератора Колпитца
+на основе мемристора~\cite{DBLP:journals/corr/WangWQ15}.
+
 На рис.~\ref{atu:f:colp_schem} приставлена одна из электрических схем,
 реализующих генератор Колпитца на биполярном транзисторе.
 Из множества схем, данная была выбрана из-за наличия
@@ -136,6 +143,10 @@ $ T_s = \sqrt{L C} $.
   \od{}{t}  = \frac{1}{T_s} \od{}{t_s}; \quad
   \od{x}{t_s} \equiv \dot{x} = T_s \od{x}{t} .
 \]
+
+Для оценки параметров генератора Колпитца также используется
+метод синхронизации хаотических колебаний~\cite{PhysRevE.80.016201,picovskii_syncro,bonetti_super_persistent_colpitts},
+но в данной работе акцент сделан на другие методы.
 
 % }}}1
 
