Some moew bib, try to resort

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -1696,5 +1696,34 @@
   pages={023120}
 }
 
+@Book{landau1,
+  title = {Курс теоретической физики I. Механика},
+  author = {Ландау, Л. Д. and  Лифшиц, Е. М.},
+  location = {М.:},
+  publisher = {Физматлит},
+  year = {2012},
+  language = {russian},
+  pagetotal = {224},
+}
 
+@Book{greshilov_mat_met_prognoz,
+  title = {Математические методы построения прогнозов},
+  author = {Грешилов, А. А. and Стакун, В. А. and  Стакун А. А.},
+  location = {М.:},
+  publisher = {Радио и связь},
+  year = {1997},
+  language = {russian},
+  pagetotal = {112}
+}
+
+
+@Article{atu_asau3,
+  author = "Михалёв, А. И. and Гуда, А. И.",
+  title = "Сравнительный анализ алгоритмов поисковой идентификации нелинейных систем",
+  journal = asau,
+  year = 2000,
+  pages = {99--108},
+  number = {3(23)},
+  language = "russian"
+}
 
