--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -297,7 +297,7 @@ $q_m$ принимает значение, наиболее близкое к з
 не только параметрами системы, но и свойствами самой системы измерения,
 а также процессом взаимодействия системы измерения с моделями. При этом
 возможны весьма нетривиальные явления, такие как параметрический
-резонанс, распространение параметрических волн на множестве моделей и~т.д.
+резонанс~\cite{landau1}, распространение параметрических волн на множестве моделей и~т.д.
 
 Также существенную роль могут играть как шумы измерения, так и побочные
 эффекты от процесса фильтрации шумов.
@@ -344,7 +344,7 @@ $q_m$ принимает значение, наиболее близкое к з
 Рассмотрим возможные реализации такого усреднения.
 
 Самый очевидный способ ограниченного по времени усреднения ---
-скользящее среднее. % TODO: ref
+скользящее среднее~\cite{greshilov_mat_met_prognoz}.
 В применяемых терминах, если базовое выражение для формирования критерия
 обозначить как $x(t)$, то этот способ усреднения имеет вид:
 %
