Adjust bib sotring

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -2,7 +2,8 @@
 @string{mich = "Михалёв, А. И."}
 @string{st = "Системные технологии"}
 
-% @Article{,
+
+  % @Article{,
 %  author = {},
 %  title = {},
 %  journal = {},
@@ -22,10 +23,13 @@
 %  pagetotal = {},
 %  annote = {}
 %}
+% %   options = {useauthor=false},
+% %   options = {useauthor=true},
 
 @Book{anisch_nonlin_eff,
   title = {Нелинейные эффекты в хаотических и стохастических системах},
   author = {Анищенко, В. С. and Астахов, В. В. and Вадивасова, Т. Е. and Нейман, А. Б. and Стрелкова, Г. И. and Шиманский-Гайер, Л.},
+  options = {useauthor=true},
   location = {Москва-Ижевск},
   publisher = {Институт компьютерных исследований},
   year = {2003},
@@ -47,6 +51,7 @@
 @Book{dmitriev_gen_chaos,
   title = {Генерация хаоса},
   author = {Дмитриев, А. С. and Ефремова, Е. В. and Максимов, Н. А. and Панас, А. И.},
+  options = {useauthor=true},
   editor = {Дмитриев, А. С.},
   location = {М.},
   publisher = {Техносфера},
@@ -264,6 +269,7 @@
 @Book{koltsova_nl_dyn_chem,
   title = {Нелинейная динамика и термодинамика необратимых процессов в химии и химической технологии},
   author = {Кольцова, Э. М. and Третьяков, Ю. Д. and Гордеев, Л. С. and Вертегел, А. А.},
+  options = {useauthor=true},
   location = {М.},
   publisher = {Химия},
   year = {2001},
@@ -638,6 +644,7 @@
 
 @Book{stat_bluming,
   author = {Коцарь, С. Л. and Поляков, Б. Н. and Макаров, Ю. Д. and Чичигин, В. А.},
+  options = {useauthor=true},
   title = {Статистический анализ и математическое моделирование блюминга},
   address = {М.},
   publisher = {Металлургия},
@@ -688,6 +695,7 @@
 
 @Book{ctl_vent_electro,
   author = {Лебедев, Е. Д. and Неймарк, В. Е. and Пистрак, М. Я. and Слежановский О. В.},
+  options = {useauthor=true},
   title = {Управление вентильными электроприводами постоянного тока},
   address = {М.},
   publisher = {Энергия},
@@ -698,6 +706,7 @@
 
 @Book{tyrist_electr_procat,
   author = {Перельмутер, В. М. and Брауде, Ю. Н. and Перчик, Д. Я. and Книгин, В. М.},
+  options = {useauthor=true},
   editor = {Перельмутер, В. М.},
   title = {Тиристорные электроприводы прокатных станов},
   address = {М.},
@@ -1029,6 +1038,7 @@
 
 @Book{kostyuk_ad_sy_id,
   author = {Кику, А. Г. and Костюк, В. И. and Краскевич, В. Е. and Сильвестров, А. Н. and Шпит, С. В.},
+  options = {useauthor=true},
   title = {Адаптивные системы идентификации},
   address = {Киев},
   publisher = {Техніка},
@@ -1087,6 +1097,7 @@
 
 @Article{atu_ferro,
   author = {Михалёв, А. И. and Лысый, Д. А. and Гуда, А. И. and Власова, Т. Е.},
+  options = {useauthor=true},
   title = {Применение идентификаторов состояния для управления выплавкой ферросилиция},
   journal = {Вестник ХГТУ},
   address = {Харьков},
@@ -1410,6 +1421,7 @@
 
 @Article{spinul_opt_act_id,
   author = {Бойкова, В. О. and Мирунко, В. М. and Сільвестров, А. М. and Спінул, Л. Ю.},
+  options = {useauthor=true},
   title = {Оптимизация режимов активной идентификации динамических объектов},
   journal = {Адаптивные системы автоматического управления},
   number = {8(28)},
@@ -1472,6 +1484,7 @@
 @Book{shiskin_electronnie_pribori,
   title = {Электронные приборы},
   author = {Дулин, В. Н. and Аваев, Н. А. and Демин, В. П. and Наумов, Ю. Е. and Струков, А. З. and Шишкин, Г. Г.},
+  options = {useauthor=true},
   location = {М.:},
   publisher = {Энергоатомиздат},
   year = {1989},
@@ -1486,7 +1499,7 @@
   volume    = {abs/1511.05437},
   year      = {2015},
   url       = {http://arxiv.org/abs/1511.05437},
-  % archivePrefix = {arXiv},
+  archivePrefix = {arXiv},
   eprint    = {1511.05437},
   % timestamp = {Mon, 28 Aug 2017 17:00:31 +0200},
   % biburl    = {http://dblp.org/rec/bib/journals/corr/WangWQ15},
@@ -1496,6 +1509,7 @@
 @article{PhysRevE.80.016201,
   title = {Parameter and state estimation of experimental chaotic systems using synchronization},
   author = {Quinn, John C. and Bryant, Paul H. and Creveling, Daniel R. and Klein, Sallee R. and Abarbanel, Henry D. I.},
+  options = {useauthor=true},
   journal = {Phys. Rev. E},
   volume = {80},
   issue = {1},
@@ -1505,7 +1519,7 @@
   month = {7},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevE.80.016201},
-  % url = {https://link.aps.org/doi/10.1103/PhysRevE.80.016201}
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.80.016201}
 }
 
 
@@ -1522,7 +1536,8 @@
 }
 
 @article{doi:10.1063/1.4705999,
-  author = {F. Moron and A. L. Hoendervanger and M. Bonneau and Q. Bouton and A. Aspect and D. Boiron and D. Clement and C. I. Westbrook},
+  author = {Moron, F.  and Hoendervanger, A. L.  and Bonneau, M.  and Bouton, Q.  and Aspect, A.  and Boiron, D.  and Clement, D.  and Westbrook, C. I. },
+  options = {useauthor=true},
   title = {An oscillator circuit to produce a radio-frequency discharge and application to metastable helium saturated absorption spectroscopy},
   journal = {Review of Scientific Instruments},
   volume = {83},
@@ -1530,23 +1545,23 @@
   pages = {044705},
   year = {2012},
   doi = {10.1063/1.4705999},
-  % url = {https://doi.org/10.1063/1.4705999},
+  url = {https://doi.org/10.1063/1.4705999},
   eprint = {https://doi.org/10.1063/1.4705999}
 }
 
 @Article{bonetti_super_persistent_colpitts,
-   author = {{Bonetti}, R.~C. and {de Souza}, S.~L.~T. and {Batista}, A.~M. and  {Szezech}, Jr., J.~D. and {Caldas}, I.~L. and {Viana}, R.~L. and {Lopes}, S.~R. and {Baptista}, M.~S.},
-   title = {Super persistent transient in a master-slave configuration with {Colpitts} oscillators},
-   journal = {Journal of Physics A Mathematical General},
-   % archivePrefix = "arXiv",
-   eprint = {1405.0175},
-   primaryClass = "nlin.CD",
-   year = 2014,
-   month = oct,
-   volume = 47,
-   eid = {405101},
-   pages = {405101},
-   doi = {10.1088/1751-8113/47/40/405101},
+  author = {{Bonetti}, R.~C. and {de Souza}, S.~L.~T. and {Batista}, A.~M. and  {Szezech}, Jr., J.~D. and {Caldas}, I.~L. and {Viana}, R.~L. and {Lopes}, S.~R. and {Baptista}, M.~S.},
+  title = {Super persistent transient in a master-slave configuration with {Colpitts} oscillators},
+  journal = {Journal of Physics A Mathematical General},
+  archivePrefix = "arXiv",
+  eprint = {1405.0175},
+  primaryClass = "nlin.CD",
+  year = 2014,
+  month = oct,
+  volume = 47,
+  eid = {405101},
+  pages = {405101},
+  doi = {10.1088/1751-8113/47/40/405101},
 }
 
 @Article{dmitriev_trans_chaos_lowpower,
@@ -1592,7 +1607,7 @@
   year = {1976},
   issn = {0375-9601},
   doi = {https://doi.org/10.1016/0375-9601(76)90101-8},
-  % url = {http://www.sciencedirect.com/science/article/pii/0375960176901018}
+  url = {http://www.sciencedirect.com/science/article/pii/0375960176901018}
 }
 
 @Book{andrianov_laser,
