--- a/atudiss.tex
+++ b/atudiss.tex
@@ -5,7 +5,9 @@
 \newlength\TW
 \setlength{\TW}{0.01\textwidth} % after geometry!
 
-\usepackage[backend=biber,language=russian,sorting=nty,maxnames=5,bibstyle=gost-numeric]{biblatex}
+% \usepackage[backend=biber,language=russian,sorting=nty,maxnames=5,bibstyle=gost-numeric]{biblatex}
+%\usepackage[backend=biber,bibstyle=gost-numeric,language=russian,sorting=nty,movenames=false,url=false,eprint=false]{biblatex}
+\usepackage[backend=biber,bibstyle=gost-numeric,language=russian,sorting=nty,url=false,eprint=false]{biblatex}
 
 \input{tikzsetup.tex}
 
