Add Raibman definition

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -390,6 +390,17 @@
   language = {russian}
 }
 
+
+@Article{raibman_id_obj_ctl,
+  title = {Идентификация объектов управления (обзор)},
+  author = {Райбман, Н. С. },
+  journal = {Автоматика и телемеханика},
+  year = 1979,
+  number = {6},
+  pages = {80--93},
+  language = {russian}
+}
+
 % ------------------------ PHD renamed -----------------------------------
 
 
