--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -28,29 +28,35 @@
 методов для решения задач моделирования,
 управления и идентификации~\cite{karabutov_adapt_id_sys,dmitriev_trans_chaos_lowpower}.
 
-\section{Свойства систем хаотической динамики применительно к задаче идентификации}  % {{{1
-
-Одним из основных свойств систем хаотической динамики является чувствительность
-к малым возмущениям сходных сигналов, состояния системы или же параметров.
-В линейном приближении это соответствует положительным значениям
-коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
-
-
-% }}}1
 
 \section{Основные понятия задачи идентификации динамических систем} % {{{1
 
 Одно из первых определений задачи идентификации было дано
 Л.~Заде~\cite{zadeh_id_1956}.
 
-Определение Райбмана.
 
-Под идентификацией
+Н.С.~Райбман в предисловии к известной работе П.~Эйкхоффа~\cite{eykhoff_id_base}
+дал следующее определении идентификации
+``по результатам наблюдений над входными и выходными переменными системы должна быть
+построена оптимальная в некотором смысле модель, то есть формализированное представление этой системы''.
+Данное определение отличается предельной широтой охвата за счёт того,
+что под определение ``оптимальная в некотором смысле'' попадает
+практически любое, в том числе не относящееся к собственно идентификации условие.
+В одной из последующих работ~\cite{raibman_id_obj_ctl}
+вид этого определения стал более строгим и формальным:
+``В качестве критерия оптимальности используется функция выходных переменных объекта $y(t)$ и модели
+$y^{*}(t) = A_t^{*} x(s) $, и на ёё математическое ожидание накладывается условие
+$M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
+Это определение действительно соответствует задаче идентификации ценой
+введения существенных ограничений: возможности представления динамики системы в виде оператора,
+существования и возможности определения математического ожидания,
+и соответствия минимума этого ожидания близости динамики системы и её модели.
+
+
 
 Определение Растригина.
 
 
-% }}}1
 
 Критерии
 
@@ -69,6 +75,7 @@
 и в условиях шумов измерения выделить полезную
 для идентификации составляющую весьма затруднительно.
 
+% }}}1
 
 \section{Существующие методы идентификации нелинейных динамических систем и их свойства}  % {{{1
 
@@ -91,12 +98,40 @@
 
 Карабутов~\cite{karabutov_adapt_id_sys,saliga_id_ctl_black}
 
+Козлов~\cite{kozlov_nosearch_sns} -- беспоисковые.
+
+Растригин~\cite{rastr_stat_meth_search,rastr_seu,rastr_intro,rastr_adop_complex_sys,rastr_rand_search}
+
+Борцов~\cite{borcov} -- эле-мех.
+
 Автоматическая оптимизация в задачах пространственного распределения~\cite{auto_optim_intask}
 
 Адаптивно-поисковые методы и алгоритмы оптимизации и идентификации динамических систем~\cite{mich_92}
 
 % }}}1
 
+\section{Свойства систем хаотической динамики применительно к задаче идентификации}  % {{{1
+
+Одним из основных свойств систем хаотической динамики является чувствительность
+к малым возмущениям сходных сигналов, состояния системы или же параметров.
+В линейном приближении это соответствует положительным значениям
+коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
+
+
+% }}}1
+
+\section{Постановка задачи исследования}  % {{{1
+
+Критерии.
+
+Методы.
+
+Средства моделирования и измерения.
+
+Проверка адекватности.
+
+
+% }}}1
 
 \section{Постановка задачи идентификации}  % {{{1
 
@@ -205,25 +240,6 @@ c) упрощённая форма варианта b) -- ограничение
 
 
 
-Козлов~\cite{kozlov_nosearch_sns} -- беспоисковые.
-
-Растригин~\cite{rastr_stat_meth_search,rastr_seu,rastr_intro,rastr_adop_complex_sys,rastr_rand_search}
-
-Борцов~\cite{borcov} -- эле-мех.
-
-
-% }}}1
-
-
-\section{Постановка задачи исследования}  % {{{1
-
-Критерии.
-
-Методы.
-
-Средства моделирования и измерения.
-
-Проверка адекватности.
 
 
 % }}}1
@@ -235,4 +251,4 @@ c) упрощённая форма варианта b) -- ограничение
 % }}}1
 
 
-% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
+% vim: fdm=marker foldlevel=0 foldignore="%#" fdc=4 ft=tex
