Fix bib in aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -46,6 +46,7 @@
 \newcommand{\xsect}[1]{\medskip\begin{center}\textbf{#1}\end{center}\medskip\penalty10000}
 %\newcommand{\xxsect}[1]{\smallskip\begin{center}\textbf{#1}\end{center}\smallskip\penalty10000}
 \newcommand{\xxsect}[1]{\smallskip\textbf{#1}\smallskip\penalty10000}
+\newcommand{\xxxsect}[1]{\smallskip\textit{#1}\smallskip\penalty10000}
 
 
 \begin{document}
@@ -2546,18 +2547,22 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 
 \nocite{*}
 
-\xsect{Список опублікованих праць за темою дисертації у наукометрічних виданнях}
+\xsect{Список опублікованих праць за темою дисертації}
+
+\xxxsect{Статті у виданнях, що включені до міжнародних науковометричних баз:}
 
 \printbibliography[heading=none, keyword=scimetr]
 
 
-\xsect{СПИСОК ОПУБЛІКОВАНИХ ПРАЦЬ ЗА ТЕМОЮ ДИСЕРТАЦІЇ 2}
+\xxxsect{Статті у наукових фахових виданнях:}
 
 \printbibliography[heading=none, keyword=vak]
 
+\xxxsect{Статті в закордонних виданнях:}
 
+\printbibliography[heading=none, keyword=foreign]
 
-\xsect{Тези доповідей на наукових конференціях}
+\xxxsect{Матеріали наукових конференцій:}
 
 \printbibliography[heading=none, keyword=confer]
 
