--- a/atuworks.bib
+++ b/atuworks.bib
@@ -27,6 +27,8 @@
   publisher = {ХНТУ},
 }
 
+% ----------------------------------------- sci metr --------------------------------------------
+
 % РИНЦ, elib
 @Article{atu_asau12,
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
@@ -58,7 +60,7 @@
   title = {Критерии идентификации параметров хаотической динамики управляемого объекта},
   author = {Гуда, А. И. and Михалёв, А. И. and Деревянко, А. И.},
   keywords = {atuw, scimetr},
-  journal = {Автомобільний транспорт.  -- Вісник Харківського національного автодорожнього університету.},
+  journal = {Автомобільний транспорт.  -- Вісник Харківського національного автодорожнього університету. (РИНЦ)},
   language     = {russian},
   langid       = {russian},
   year = {2009},
@@ -202,7 +204,7 @@
 
 @Article{atu_electronika2013,
   title = {Physical background in identification criterion synthesis},
-  author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisała, P },
+  author = {Guda, A. I and Mikhalyov, A. I. and Derevjanko, A. I.  and Kisala, P },
   keywords = {atuw, scimetr},
   journal = {Elektronika  konstrukcje, technologie, zastosowania (Index Copernicus)},
   language     = {english},
@@ -304,6 +306,7 @@
   pages = {138--243}
 }
 
+% ik
 @Article{atu_st103,
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
   xdata = {st_ik},
@@ -315,6 +318,7 @@
   pages = {57--62}
 }
 
+% ik
 @Article{atu_st105,
   title = {Визначення гранулометричного складу матеріалу у повітряному потоці з використанням діаграм Пуанкаре},
   xdata = {st_ik},
@@ -327,6 +331,7 @@
   pages = {18--24}
 }
 
+% ik
 @Article{atu_st107,
   title = {A low-voltage coupled relaxation generator with chaotic behavior: simulation, measurement and identification},
   xdata = {st_ik},
@@ -351,17 +356,6 @@
   pages = {160--165}
 }
 
-@Article{atu_jacs2015,
-  title = {Multi-model identification system properties near extremum: simulations and analysis},
-  journal = {Journal of Applied Computer Science – JACS-2015},
-  author = atume,
-  keywords = {atuw, scimetr},
-  language     = {english},
-  langid       = {english},
-  year = {2015},
-  number = {23(2)},
-  pages = {21-28}
-}
 
 @Article{atu_st104a,
   title = {Особливості використання HX711 для отримання даних з тензодатчика},
@@ -400,7 +394,6 @@
   number = {3(58)},
   pages = {204--207}
 }
-
 
 @Article{atu_ric2016,
   title = {Multi-models identification methods comparison in the non-linear dynamic system identification task},
@@ -535,6 +528,19 @@
   pages = {200--229}
 }
 
+% ------------------- foreign --------------------------------------
+
+@Article{atu_jacs2015,
+  title = {Multi-model identification system properties near extremum: simulations and analysis},
+  journal = {Journal of Applied Computer Science – JACS-2015},
+  author = atume,
+  keywords = {atuw, foreign},
+  language     = {english},
+  langid       = {english},
+  year = {2015},
+  number = {23(2)},
+  pages = {21-28}
+}
 
 % ------------------- confereces -----------------------------
 
